[package]
name = "uuid-rs"
description = "A Simple Universally Unique IDentifier (UUID)"
authors = ["Abdelwahab <ab22593k@gmail.com>"]
documentation = "https://docs.rs/uuid-rs"
repository = "https://github.com/ab22593k/uuid-rs"
version = "0.6.3"
license = "MIT"
edition = "2021"
readme = "README.md"
categories = [
    "data-structures",
    "algorithms",
    "cryptography"
]
keywords = [
    "uuid",
    "unique",
    "global",
    "rand",
]

[dependencies]
mac_address = { version = "1.1.7", optional = true }
rand = { version = "0.8.5", optional = true }
md5 = { version = "0.7.0", optional = true }
sha1_smol = { version = "1.0.1", optional = true }

[dev-dependencies.regex]
version = "1.3.9"

[features]
default = ["mac"]
mac = ["mac_address", "rand"]
rnd = ["rand"]
hsha1 = ["sha1_smol"]
hmd5 = ["md5"]

[package.metadata.docs.rs]
all-features = true
